fixed block-aside-contact minimap on small and medium

--- a/src/modules/block-aside-contact/_style.scss
+++ b/src/modules/block-aside-contact/_style.scss
@@ -2,14 +2,7 @@
 
   .block-aside-minimap {
     margin-bottom: 5px;
-    height: 200px;
-
-    > a,
-    > img {
-      position: absolute;
-    }
-
-    img {height: 200px;}
+    img {max-width: 100%;}
   }
 
   .block-aside-items {
@@ -68,4 +61,33 @@
     margin-right: 5px;
   }
 
+}
+
+@include medium {
+  .block-aside-contact {
+    .block-aside-minimap,
+    .block-aside-minimap img {
+      height: 185px;
+    }
+  }
+}
+
+@include large-and-medium {
+  .block-aside-contact {
+    .block-aside-minimap {
+      > a,
+      > img {
+        position: absolute;
+      }
+    }
+  }
+}
+
+@include large {
+  .block-aside-contact {
+    .block-aside-minimap,
+    .block-aside-minimap img {
+      height: 200px;
+    }
+  }
 }
